tests/sksl/errors/ReservedNamePrecision.glsl
### Compilation failed:

error: 1: 'precision' is a reserved word
int precision;
    ^^^^^^^^^
1 error
